--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mail-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="匿名邮箱接码服务 - 临时邮箱，验证码自动提取" />
+    <title>匿名邮箱接码服务</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%; height: 100%;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
